[gd_scene load_steps=5 format=3 uid="uid://duhhf8vkyckk3"]

[ext_resource type="Script" path="res://scripts/imprimante.gd" id="1_0bq7a"]
[ext_resource type="PackedScene" uid="uid://cstpusrc8pqrr" path="res://scenes/bouton_retour_carnet.tscn" id="2_m7lgv"]
[ext_resource type="Texture2D" uid="uid://b3i0bs0ajcur8" path="res://art/projets.png" id="3_8jnii"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o4wg5"]
size = Vector2(1150, 567)

[node name="imprimante" type="Node2D"]
script = ExtResource("1_0bq7a")

[node name="bouton_retour_carnet" parent="." instance=ExtResource("2_m7lgv")]
z_index = 1
position = Vector2(382, -10)
scale = Vector2(0.8, 0.8)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 328)
texture = ExtResource("3_8jnii")

[node name="Area2D" type="Area2D" parent="Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Area2D"]
position = Vector2(0, 37.5)
shape = SubResource("RectangleShape2D_o4wg5")

[connection signal="input_event" from="Sprite2D/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
